ENEX FSL/snapshotDownload (1)/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>chqin__Visit_Duration_Minutes__c</fullName>
        <description>Visit Duration in Minutes. 
If Check-in Time is later than Check-out Time, visit duration is 0. This situation may arise if carrier network location is used.</description>
        <formula>IF(((chqin__Check_Out_Time__c - chqin__Check_In_Time__c )*24*60+1)&gt;0,(chqin__Check_Out_Time__c - chqin__Check_In_Time__c )*24*60+1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visit Duration (Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ilinktcsf__CallDisposition2__c</fullName>
        <description>This field will be used if two-stage wrap-up codes are supported.
The value of this field is related to the value of the Task&apos;s or Event&apos;s CallDisposition  field. So it can be considered as &quot;Sub-Wrap-up&quot; code.</description>
        <label>CallDisposition2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ilinktcsf__CallDisposition__c</fullName>
        <description>This custom field is created to have a similar field as Task CallDisposition-field.
With this field we can store Call wrap-up codes if e.g. Events are used as Activities.</description>
        <label>CallDisposition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ilinktcsf__CallObject__c</fullName>
        <description>This custom field is created to have a similar field as Task CallObject-field.
This field will be used to contain the acutal datetime, which will later serve to sort the queried latest activities.</description>
        <label>CallObject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ilinktcsf__CallTags__c</fullName>
        <description>Tags related to the activity&apos;s call.</description>
        <label>Call tags</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ilinktcsf__CallType__c</fullName>
        <description>This custom field is created to have a similar field as Task CallType-field.
Here we can store the information about the call type inbound, outbound, etc.</description>
        <label>CallType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
                <value>
                    <fullName>internal</fullName>
                </value>
                <value>
                    <fullName>external</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ilinktcsf__Call_Duration_hh_mm_ss__c</fullName>
        <description>This formula converts the integer contained in the field &apos;CallDurationInSeconds&apos; to a text in the following format hh:mm:ss</description>
        <formula>IF(MOD(FLOOR(CallDurationInSeconds/3600),24) &lt; 10, &quot;0&quot;+TEXT(MOD(FLOOR(CallDurationInSeconds/3600),24)),TEXT(MOD(FLOOR(CallDurationInSeconds/3600),24)))+&quot;:&quot;+
IF(MOD(FLOOR(CallDurationInSeconds/60),60) &lt; 10, &quot;0&quot;+TEXT(MOD(FLOOR(CallDurationInSeconds/60),60)),TEXT(MOD(FLOOR(CallDurationInSeconds/60),60)))+&quot;:&quot;+
IF(MOD(CallDurationInSeconds,60) &lt; 10, &quot;0&quot;+TEXT(MOD(CallDurationInSeconds,60)),TEXT(MOD(CallDurationInSeconds,60)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Duration (hh:mm:ss)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ilinktcsf__Called__c</fullName>
        <description>The Called phone number.</description>
        <label>Called</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ilinktcsf__Caller__c</fullName>
        <description>The calling phone number.</description>
        <label>Caller</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ilinktcsf__Duration_In_Seconds__c</fullName>
        <description>This custom field will contain the amount of seconds a call took. It can be used to store the call duration in seconds within a Salesforce Activity Object (such as Event), which don&apos;t include a standard field containing seconds.
Indeed, Event objects contain the standard field &quot;DurationInMinutes&quot;, but because using OpenCTI saveLog we can only save AllDay Events, where this field is automatically filled with 1440. So we cannot use it.</description>
        <label>Duration in seconds</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ilinktcsf__LastRedirecting__c</fullName>
        <description>Contains the transferring phone number..</description>
        <label>Last Hop</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ilinktcsf__Legible_Call_Duration__c</fullName>
        <description>This formula converts the integer contained in the custom field &apos;ilinktcsf__Duration_In_Seconds__c&apos; to a text with the following format hh:mm:ss</description>
        <formula>IF(MOD(FLOOR(ilinktcsf__Duration_In_Seconds__c/3600),24) &lt; 10, &quot;0&quot;+TEXT(MOD(FLOOR(ilinktcsf__Duration_In_Seconds__c/3600),24)),TEXT(MOD(FLOOR(ilinktcsf__Duration_In_Seconds__c/3600),24)))+&quot;:&quot;+
IF(MOD(FLOOR(ilinktcsf__Duration_In_Seconds__c/60),60) &lt; 10, &quot;0&quot;+TEXT(MOD(FLOOR(ilinktcsf__Duration_In_Seconds__c/60),60)),TEXT(MOD(FLOOR(ilinktcsf__Duration_In_Seconds__c/60),60)))+&quot;:&quot;+
IF(MOD(ilinktcsf__Duration_In_Seconds__c,60) &lt; 10, &quot;0&quot;+TEXT(MOD(ilinktcsf__Duration_In_Seconds__c,60)),TEXT(MOD(ilinktcsf__Duration_In_Seconds__c,60)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legible call duration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ilinktcsf__Status__c</fullName>
        <description>This custom field is a picklist containing the same values as Task Status-field.
This custom field can be used if the Activity to be saved is e.g. an Event.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Waiting on someone else</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
                <value>
                    <fullName>Not Answered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ilinktcsf__UCID__c</fullName>
        <description>The Universal Call ID</description>
        <label>UCID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ilinktcsf__isTCSFTask__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The value of this field will serve to identify Tasks generated using &quot;TeamCall Salesforce.com&quot; Software from other Tasks.</description>
        <label>is TCSF Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ilinktcsf__isWrapupIncomplete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used within ilink TeamCall Salesforce.com.
And allows us to check if the wrap-up of the considered Activity was completed or not.</description>
        <label>is Wrap-up Incomplete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sma__BaseObjectId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MapAnything Base Object</label>
        <referenceTo>sma__MABaseObject__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>BaseObjectIds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sma__LayerId__c</fullName>
        <label>Layer Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>